@@ -1,3 +1,10 @@
+1999-12-12  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
+
+	* poe.el: Modified comments.
+
+	* pym.el (defalias-maybe): Don't update `current-load-list'.
+	Modified comments.
+
 1999-12-06  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>
 
 	* pym.el (subr-fboundp): Reverted; but considered as obsolete.
